Add filter to remove timeshifted duplicates